--- a/Assesment/index.html
+++ b/Assesment/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Manager</title>
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
 <div class="container">
@@ -23,7 +23,8 @@
     <div id="postsContainer" class="posts-container"></div>
 </div>
 
-<script src="/js/index.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
+
 
